# ground-control

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE.md  README.md  index.html  justfile  package-lock.json  package.json  vite.config.ts
.claude/: settings.json
crates/gc-cli/: Cargo.toml
crates/gc-cli/src/: main.rs
crates/gc-core/: Cargo.toml
crates/gc-core/src/: lib.rs  models.rs  parser.rs  store.rs  watcher.rs
docs/: rig-spec.md  spec.md
docs/superpowers/plans/: 2026-06-28-rig-v0.1.md
schema/: history-entry.schema.json  session-entry.schema.json  session-registry.schema.json
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
