[workspace]
members = ["crates/gc-core", "crates/gc-cli", "src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/phatblat/ground-control"

[workspace.dependencies]
gc-core = { path = "crates/gc-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
thiserror = "2"
anyhow = "1"
dirs-next = "2"
